# homelab

./: .devcontainer.json  .env.example  .gitignore  .typos.toml  Pulumi.homelab.yaml  Pulumi.yaml  README.md  Saltfile  devenv.nix  devenv.yaml  go.mod  go.sum  main.go  pyproject.toml
.github/workflows/: pulumi.yaml
docs/: usage.md
docs/nutanix/: bootstrap.md
pkg/: run.go
pkg/cloud/: cloud.go
pkg/cloud/aws/: aws.go
pkg/cloud/aws/config/: config.go  schema.go
pkg/cloud/azure/: azure.go
pkg/cloud/azure/config/: config.go  schema.go
pkg/cloud/gcp/: gcp.go
pkg/cloud/gcp/config/: config.go  schema.go
pkg/cloud/global/: global.go
pkg/cloud/global/config/: config.go  schema.go
pkg/cloud/nutanix/: nutanix.go
pkg/cloud/nutanix/config/: nutanix.go  schema.go
pkg/cloud/vsphere/: vm.go  vsphere.go
pkg/cloud/vsphere/config/: config.go  schema.go
pkg/config/: config.go  schema.go
pkg/config/aws/: aws.go  schema.go
pkg/config/azure/: azure.go  schema.go
pkg/config/gcp/: gcp.go  schema.go
pkg/config/global/: schema.go
pkg/config/nutanix/: nutanix.go  schema.go
pkg/config/vsphere/: schema.go  vsphere.go
salt/config/: roster
salt/config/master.d/: logging.conf  master.conf  salt-ssh.conf
salt/logs/: .gitkeep
salt/pillar/: hostnames.sls
salt/states/: hostname.sls  password.sls  ssh.sls  sshd_config.sls  top.sls
scripts/: run.sh
